--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,8 @@
 ###############################################################################
 *.cs     diff=csharp
 
+*.razor linguist-language=C#
+
 ###############################################################################
 # Set the merge driver for project and solution files
 #
